# moodle2portico

./: README.md  pyproject.toml
examples/: download_gradebook.py
moodle2portico/: __init__.py  moodle.py  utils.py
